--- a/01_project_data_preprocessing.ipynb
+++ b/01_project_data_preprocessing.ipynb
@@ -9,8 +9,8 @@
     "id": "827c20bf"
    },
    "source": [
-    "Во второй части проекта вы выполните шаги 3 и 4. Их вручную проверит ревьюер.\n",
-    "Чтобы вам не пришлось писать код заново для шагов 1 и 2, мы добавили авторские решения в ячейки с кодом. \n",
+    "",
+    "\n",
     "\n"
    ]
   },
@@ -31,12 +31,13 @@
    "id": "e53b75b8-a6d1-475e-88b0-90f6d4fad99a",
    "metadata": {},
    "source": [
+    "Ответим на вопросы:\n",
     "Есть ли зависимость между количеством детей и возвратом кредита в срок?\n",
     "Есть ли зависимость между семейным положением и возвратом кредита в срок?\n",
     "Есть ли зависимость между уровнем дохода и возвратом кредита в срок?\n",
     "Как разные цели кредита влияют на его возврат в срок?\n",
-    "Приведите возможные причины появления пропусков в исходных данных.\n",
-    "Объясните, почему заполнить пропуски медианным значением — лучшее решение для количественных переменных."
+    "Приведем возможные причины появления пропусков в исходных данных.\n",
+    "Объясним, почему заполнить пропуски медианным значением — лучшее решение для количественных переменных."
    ]
   },
   {
@@ -48,7 +49,7 @@
     "id": "744d7639"
    },
    "source": [
-    "## Откройте таблицу и изучите общую информацию о данных"
+    "## 1.Откроем таблицу и изучим общую информацию о данных"
    ]
   },
   {
@@ -60,7 +61,7 @@
     "id": "e7a14c31"
    },
    "source": [
-    "**Задание 1. Импортируйте библиотеку pandas. Считайте данные из csv-файла в датафрейм и сохраните в переменную `data`. Путь к файлу:**\n",
+    "**Задание 1. Импортируем библиотеку pandas. Считаем данные из csv-файла в датафрейм и сохраним в переменную `data`. Путь к файлу:**\n",
     "\n",
     "`/datasets/data.csv`"
    ]
@@ -92,7 +93,7 @@
     "id": "b8038fe3"
    },
    "source": [
-    "**Задание 2. Выведите первые 20 строчек датафрейма `data` на экран.**"
+    "**2.Выведем первые 20 строчек датафрейма `data` на экран.**"
    ]
   },
   {
@@ -531,7 +532,7 @@
     "id": "1c12e233"
    },
    "source": [
-    "**Задание 3. Выведите основную информацию о датафрейме с помощью метода `info()`.**"
+    "**3.Выведем основную информацию о датафрейме с помощью метода `info()`.**"
    ]
   },
   {
@@ -607,7 +608,7 @@
     "id": "cd84967c"
    },
    "source": [
-    "**Задание 4. Выведите количество пропущенных значений для каждого столбца. Используйте комбинацию двух методов.**"
+    "**4. Выведем количество пропущенных значений для каждого столбца. Используем комбинацию двух методов.**"
    ]
   },
   {
@@ -656,7 +657,7 @@
     "id": "db86e27b"
    },
    "source": [
-    "**Задание 5. В двух столбцах есть пропущенные значения. Один из них — `days_employed`. Пропуски в этом столбце вы обработаете на следующем этапе. Другой столбец с пропущенными значениями — `total_income` — хранит данные о доходах. На сумму дохода сильнее всего влияет тип занятости, поэтому заполнить пропуски в этом столбце нужно медианным значением по каждому типу из столбца `income_type`. Например, у человека с типом занятости `сотрудник` пропуск в столбце `total_income` должен быть заполнен медианным доходом среди всех записей с тем же типом.**"
+    "**5. В двух столбцах есть пропущенные значения. Один из них — `days_employed`. Пропуски в этом столбце обработаем на следующем этапе. Другой столбец с пропущенными значениями — `total_income` — хранит данные о доходах. На сумму дохода сильнее всего влияет тип занятости, поэтому заполнить пропуски в этом столбце нужно медианным значением по каждому типу из столбца `income_type`. Например, у человека с типом занятости `сотрудник` пропуск в столбце `total_income` должен быть заполнен медианным доходом среди всех записей с тем же типом.**"
    ]
   },
   {
@@ -695,7 +696,7 @@
     "id": "57964554"
    },
    "source": [
-    "**Задание 6. В данных могут встречаться артефакты (аномалии) — значения, которые не отражают действительность и появились по какой-то ошибке. таким артефактом будет отрицательное количество дней трудового стажа в столбце `days_employed`. Для реальных данных это нормально. Обработайте значения в этом столбце: замените все отрицательные значения положительными с помощью метода `abs()`.**"
+    "**6. В данных могут встречаться артефакты (аномалии) — значения, которые не отражают действительность и появились по какой-то ошибке. таким артефактом будет отрицательное количество дней трудового стажа в столбце `days_employed`. Для реальных данных это нормально. Обработаем значения в этом столбце: заменим все отрицательные значения положительными с помощью метода `abs()`.**"
    ]
   },
   {
@@ -720,7 +721,7 @@
     "id": "6107dd2f"
    },
    "source": [
-    "**Задание 7. Для каждого типа занятости выведите медианное значение трудового стажа `days_employed` в днях.**"
+    "**7. Для каждого типа занятости выведем медианное значение трудового стажа `days_employed` в днях.**"
    ]
   },
   {
@@ -766,7 +767,7 @@
     "id": "38d1a030"
    },
    "source": [
-    "У двух типов (безработные и пенсионеры) получатся аномально большие значения. Исправить такие значения сложно, поэтому оставьте их как есть. Тем более этот столбец не понадобится вам для исследования."
+    "У двух типов (безработные и пенсионеры) получаются аномально большие значения. Исправить такие значения сложно, поэтому оставим их как есть. Тем более этот столбец не понадобится для исследования."
    ]
   },
   {
@@ -778,7 +779,7 @@
     "id": "d8a9f147"
    },
    "source": [
-    "**Задание 8. Выведите перечень уникальных значений столбца `children`.**"
+    "**8. Выведем перечень уникальных значений столбца `children`.**"
    ]
   },
   {
@@ -815,7 +816,7 @@
     "id": "40b9ebf2"
    },
    "source": [
-    "**Задание 9. В столбце `children` есть два аномальных значения. Удалите строки, в которых встречаются такие аномальные значения из датафрейма `data`.**"
+    "**9. В столбце `children` есть два аномальных значения. Удалим строки, в которых встречаются такие аномальные значения из датафрейма `data`.**"
    ]
   },
   {
@@ -840,7 +841,7 @@
     "id": "bbc4d0ce"
    },
    "source": [
-    "**Задание 10. Ещё раз выведите перечень уникальных значений столбца `children`, чтобы убедиться, что артефакты удалены.**"
+    "**10. Ещё раз выведем перечень уникальных значений столбца `children`, чтобы убедиться, что артефакты удалены.**"
    ]
   },
   {
@@ -889,7 +890,7 @@
     "id": "f4ea573f"
    },
    "source": [
-    "**Задание 11. Заполните пропуски в столбце `days_employed` медианными значениями по каждого типа занятости `income_type`.**"
+    "**11. Заполним пропуски в столбце `days_employed` медианными значениями по каждого типа занятости `income_type`.**"
    ]
   },
   {
@@ -916,7 +917,7 @@
     "id": "2753f40d"
    },
    "source": [
-    "**Задание 12. Убедитесь, что все пропуски заполнены. Проверьте себя и ещё раз выведите количество пропущенных значений для каждого столбца с помощью двух методов.**"
+    "**12. Убедимся, что все пропуски заполнены. Проверим себя и ещё раз выведем количество пропущенных значений для каждого столбца с помощью двух методов.**"
    ]
   },
   {
@@ -977,7 +978,7 @@
     "id": "42d19d24"
    },
    "source": [
-    "**Задание 13. Замените вещественный тип данных в столбце `total_income` на целочисленный с помощью метода `astype()`.**"
+    "**13. Заменим вещественный тип данных в столбце `total_income` на целочисленный с помощью метода `astype()`.**"
    ]
   },
   {
@@ -1013,7 +1014,7 @@
     "editable": false
    },
    "source": [
-    "**Задание 14. Обработайте неявные дубликаты в столбце `education`. В этом столбце есть одни и те же значения, но записанные по-разному: с использованием заглавных и строчных букв. Приведите их к нижнему регистру. Проверьте остальные столбцы.**"
+    "**14. Обработаем неявные дубликаты в столбце `education`. В этом столбце есть одни и те же значения, но записанные по-разному: с использованием заглавных и строчных букв. Приведем их к нижнему регистру. Проверим остальные столбцы.**"
    ]
   },
   {
@@ -1037,7 +1038,7 @@
     "id": "dc587695"
    },
    "source": [
-    "**Задание 15. Выведите на экран количество строк-дубликатов в данных. Если такие строки присутствуют, удалите их.**"
+    "**15. Выведем на экран количество строк-дубликатов в данных. Если такие строки присутствуют, удалим их.**"
    ]
   },
   {
@@ -1099,7 +1100,7 @@
     "id": "72fcc8a2"
    },
    "source": [
-    "**Задание 16. На основании диапазонов, указанных ниже, создайте в датафрейме `data` столбец `total_income_category` с категориями:**\n",
+    "**16. На основании диапазонов, указанных ниже, создадим в датафрейме `data` столбец `total_income_category` с категориями:**\n",
     "\n",
     "- 0–30000 — `'E'`;\n",
     "- 30001–50000 — `'D'`;\n",
@@ -1159,7 +1160,7 @@
     "id": "dde49b5c"
    },
    "source": [
-    "**Задание 17. Выведите на экран перечень уникальных целей взятия кредита из столбца `purpose`.**"
+    "**17. Выведем на экран перечень уникальных целей взятия кредита из столбца `purpose`.**"
    ]
   },
   {
@@ -1214,7 +1215,7 @@
     "id": "85d0aef0"
    },
    "source": [
-    "**Задание 18. Создайте функцию, которая на основании данных из столбца `purpose` сформирует новый столбец `purpose_category`, в который войдут следующие категории:**\n",
+    "**18. Создадим функцию, которая на основании данных из столбца `purpose` сформирует новый столбец `purpose_category`, в который войдут следующие категории:**\n",
     "\n",
     "- `'операции с автомобилем'`,\n",
     "- `'операции с недвижимостью'`,\n",
@@ -1301,7 +1302,7 @@
     "id": "09b242bf"
    },
    "source": [
-    "### Шаг 3. Исследуйте данные и ответьте на вопросы"
+    "### Шаг 3. Исследуем данные и ответим на вопросы"
    ]
   },
   {
