--- a/02_project_exploratory_analysis.ipynb
+++ b/02_project_exploratory_analysis.ipynb
@@ -55,11 +55,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Откройте файл с данными и изучите общую информацию. "
    ]
@@ -3733,14 +3728,6 @@
     "data.plot(x='kitchen_area', y='last_price', kind='scatter', alpha=0.1)"
    ]
   },
-
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-info\"> <b>Комментарии студента №1:</b> Упс, пропустила – подготовила код и недоделала, исправляюсь :).</div>"
-   ]
-  },
   {
    "cell_type": "code",
    "execution_count": 84,
@@ -3884,22 +3871,6 @@
    "metadata": {},
    "source": [
     "Как мы видим из графика цена различается в зависимости от количества комтат – так внезпано в лидеры выбились 7-комнатные квартиры. Хотя чего удивляться, такое колчиство комнат может свидетельствовать об элитном типе жилья."
-   ]
-  },
-  
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-info\"> <b>Комментарии студента №2:</b> Ой, а возможно это и я на первой итерации поменяла после комментария про линейную или столбчатую диаграмму.. уже запуталась и точно не скажу.</div>"
-   ]
-  },
-  
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-info\"> <b>Комментарии студента №1:</b> Так и сделаю! Для комнат выбрала линейную, для остальных параметров стобчатую - для разнообразия.</div>"
    ]
   },
   {
@@ -4310,7 +4281,6 @@
     "Зависимость от года публикации объявления небольшая."
    ]
   },
-  
   {
    "cell_type": "code",
    "execution_count": 92,
@@ -4420,7 +4390,6 @@
     "Зависимости цены от типа этажа почти нет. "
    ]
   },
-  
   {
    "cell_type": "markdown",
    "metadata": {},
@@ -4593,7 +4562,6 @@
     "Самая высокая стоимость за квадратный метр ожидаемо в Санкт-Петербурге, самая низкая – во Всеволожске."
    ]
   },
-  
   {
    "cell_type": "code",
    "execution_count": 96,
@@ -4714,13 +4682,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-info\"> <b>Комментарии студента №1:</b> Точно! Спасибо :).</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "**Cтоимость квартир Санкт-Петербурга в зависимости от расстояния до центра города**\n"
    ]
   },
@@ -4756,7 +4717,6 @@
     "\n"
    ]
   },
- 
   {
    "cell_type": "markdown",
    "metadata": {},
@@ -4786,50 +4746,7 @@
     "- самые дорогие квартиры в Санкт-Петербурге, далее идут ближайшие пригороды. Замыкает топ-десятку населённых пунктов по продажам – цена во Всеволожске;\n",
     "- пик самой высокой стоимости квартир сконцентрирован в максимальной близости к центру города. Наблюдается всплеск на расстоянии около 27 км. Такая же цена соответствует объектам, находящимся в 8 км от центра."
    ]
-  },
- 
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-info\"> <b>Комментарии студента №1:</b> Александр, спасибо большое за такую высокую \n",
-    "оценку! Проект объёмный, всё-таки не удалось избежать некоторых пропусков описаний и выводов (а где-то наоборот возможно перемудрила). \n",
-    "\n",
-    "Мне было интересно и главное - полезно читать твои комментарии. Кое-что отметила себе ещё раз повторить, ссылочки сохранила на изучить!\n",
-    "\n",
-    "Постаралась учесть комментарии и скорректировать в соответсвии с ними. Фух, надеюсь ничего не упустила критично важного! Еще раз спасибо!</div>"
-   ]
-  },
-
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-info\"> <b>Комментарии студента №2:</b> Александр, вроде бы \"домучала\" шаг 4.3, надеюсь сейчас там ок или близко к тому 🤞 У меня вопросов в целом нет. Словила себя на мысли, что какие-то соображения по коду и графикам благодаря твоим комментариям лучше уложились в голову (во всяком случае надеюсь!) Спасибо:) </div>"
-   ]
-  },
-
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Чек-лист готовности проекта**\n",
-    "\n",
-    "Поставьте 'x' в выполненных пунктах. Далее нажмите Shift+Enter."
-   ]
-  },
-  
+  }
  ],
  "metadata": {
   "ExecuteTimeLog": [
@@ -16935,9 +16852,9 @@
    }
   ],
   "kernelspec": {
-   "display_name": "anaconda-2022.05-py39",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-anaconda-2022.05-py39-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -16949,7 +16866,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.3"
   },
   "toc": {
    "base_numbering": 1,
